# optiply-etl-core

./: README.md  pyproject.toml
optiply_etl/: __init__.py  actions.py  auth.py  models.py  payloads.py  tools.py
tests/: test_smoke.py
